--- a/.github/pull-request.yml
+++ b/.github/pull-request.yml
@@ -6,7 +6,9 @@ on:
       - main
       - chore-setup-CI
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: 
+      - main
+      - chore-setup-CI
 
 jobs:
   build:
