--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Lint
         run: |
-          yarn lint:check
+          yarn run lint:check
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
