--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "repository": "git@github.com:betsybeth/autochekQAChallenge.git",
   "author": "betsybeth",
   "license": "ISC",
-  "dependencies": {
-    "faker": "^6.6.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
@@ -20,10 +18,13 @@
     "eslint-plugin-cucumber": "^2.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "faker": "5.1.0",
+    "mochawesome": "^7.1.3",
     "prettier-eslint-cli": "^5.0.1"
   },
   "scripts": {
-    "test": "yarn run cypress open",
+    "test": "yarn run cypress run",
+    
     "lint:fix": "prettier-eslint \"**/*.js\" --write --log-level=warn --list-different && eslint \"**/*.js\" --fix",
     "lint:check": "prettier-eslint --list-different \"**/*.js\""
   },
