--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
-      - name: Build and push
+      - name: Build, run test and push
         uses: docker/build-push-action@v2
         with:
           context: ./
